# literate-funicular

./: README.md
assessment-questions/: answers.md
jenkins/deployment/: Jenkinsfile
jenkins/pipeline_images/: network_config.md
jenkins/terraform/application/: Jenkinsfile
jenkins/terraform/network/: Jenkinsfile
terraform/application/: certificates_state.tf  data_sources.tf  ec2.tf  init.sh  load_balancers.tf  main.tf  network_state.tf  output.tf  s3.tf  security_groups.tf  variables.tf  variables.tfvars
terraform/network/: internet_gateway.tf  main.tf  nat_gateway.tf  network_acl.tf  outputs.tf  route_tables.tf  subnets.tf  variables.tf  variables.tfvars  vpc.tf  vpc_endpoints.tf
test-app/: pyproject.toml
test-app/test_app/: __init__.py  auth.py  main.py
test-app/test_app/templates/: base.html  index.html  upload-success.html  upload.html
