[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["Bisina Wickremasinghe <bisina@vetstoria.com>"]
readme = "README.md"
packages = [{include = "test_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
flask-login = "^0.6.2"
boto3 = "^1.26.138"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
